# rebased

./: .gitignore  .gitmodules  BUILD.bazel  README.md  zizmor.yaml
.github/ISSUE_TEMPLATE/: config.yml  issue.yml
.github/actions/build_ide/: action.yml
.github/actions/upload_ide/: action.yml
.github/workflows/: IntelliJ_IDEA.yml  ide_build_and_upload.yml  jewel-checks.yml  publish_to_package_managers.yml  tests.yml  winget_release.yml  zizmor.yml
community-resources/resources/idea/: IdeaApplicationInfo.xml  RebasedApplicationInfo.xml
idea/customization/base/src/: IntelliJIdeaExternalResourceUrls.kt  RebasedExternalResourceUrls.kt
platform/configuration-store-impl/src/: NestedProjectStorePathManager.kt
platform/configuration-store-impl/testSrc/: DefaultProjectStoreTest.kt
platform/dvcs-impl/resources/: intellij.platform.vcs.dvcs.impl.xml
platform/execution-impl/src/com/intellij/execution/: ExecutorRegistryImpl.kt
platform/execution.dashboard/resources/: intellij.platform.execution.dashboard.xml
platform/ide-core/src/com/intellij/ide/: GeneralSettings.kt
platform/ide-core/src/com/intellij/openapi/wm/: ToolWindowId.java
platform/lang-impl/src/com/intellij/facet/impl/: FacetEventsPublisher.kt
platform/lang-impl/src/com/intellij/util/indexing/: UnindexedFilesScanner.kt  UnindexedFilesScannerExecutorImpl.kt
platform/platform-api/resources/messages/: IdeBundle.properties
platform/platform-impl/: BUILD.bazel
platform/platform-impl/src/com/intellij/diagnostic/: GithubIssueReporter.kt
platform/platform-impl/src/com/intellij/ide/: GeneralSettingsConfigurable.kt
platform/platform-impl/src/com/intellij/ide/actions/: CloseAllEditorsAction.java  CloseEditorsActionBase.java  Switcher.kt
platform/platform-impl/src/com/intellij/ide/plugins/: PluginManagerPanelFactory.kt
platform/platform-impl/src/com/intellij/openapi/actionSystem/impl/: ActionManagerImpl.kt
platform/platform-impl/src/com/intellij/openapi/fileEditor/impl/: EditorEmptyTextPainter.java  EditorTabbedContainer.kt  FileEditorManagerImpl.kt
platform/platform-impl/src/com/intellij/openapi/fileEditor/impl/tabActions/: CloseTab.kt
platform/platform-impl/src/com/intellij/openapi/updateSettings/impl/: RebasedUpdateStrategy.kt  UpdateInfo.kt  UpdateStrategy.kt
platform/platform-impl/src/com/intellij/openapi/updateSettings/impl/pluginsAdvertisement/: PluginsAdvertiser.kt
platform/platform-impl/src/com/intellij/toolWindow/: defaultToolWindowlayoutProvider.kt
platform/platform-impl/testSrc/com/intellij/toolWindow/: testHelper.kt
platform/platform-impl/update-checker/src/com/intellij/openapi/updateSettings/impl/: UpdateChecker.kt  UpdateInfoPanel.kt
platform/platform-resources/src/idea/: ApplicationInfo.xsd  ExecutionActions.xml  LangActions.xml  PlatformActions.xml
platform/smRunner/resources/: intellij.platform.smRunner.xml
platform/statistics/resources/: intellij.platform.statistics.xml
platform/testFramework/common/src/common/: PlatformPrefix.java
platform/testFramework/src/com/intellij/testFramework/fixtures/impl/: CodeInsightTestFixtureImpl.java
platform/util/resources/misc/: registry.properties
platform/vcs-impl/src/com/intellij/vcs/console/: VcsConsoleTabService.kt
platform/vcs-log/impl/resources/: intellij.platform.vcs.log.impl.xml
platform/vcs-log/impl/resources/messages/: VcsLogBundle.properties
platform/vcs-log/impl/src/com/intellij/vcs/log/impl/: CommonUiProperties.java  IdeVcsLogManager.kt  VcsConsoleContentProvider.kt  VcsLogApplicationSettings.kt  VcsLogContentProvider.kt  VcsLogProjectTabsProperties.kt  VcsLogTabsManager.kt
platform/vcs-log/impl/src/com/intellij/vcs/log/ui/: CanCloseVirtualLogFile.kt  VcsLogConfigurable.kt
platform/vcs-log/impl/src/com/intellij/vcs/log/ui/editor/: DefaultVcsLogFile.kt
platform/vcs-tests/testSrc/com/intellij/openapi/vcs/changes/shelf/: ShelveChangesManagerTest.kt
platform/vcs-tests/testSrc/com/intellij/openapi/vcs/roots/: VcsRootDetectorTest.kt
platform/xdebugger-impl/frontend/resources/: intellij.platform.debugger.impl.frontend.xml
platform/xdebugger-impl/resources/: intellij.platform.debugger.impl.content.xml  intellij.platform.debugger.impl.xml
platform/xdebugger-impl/ui/resources/: intellij.platform.debugger.impl.ui.xml
plugins/coverage-common/resources/: intellij.platform.coverage.xml
plugins/git4idea/resources/: intellij.vcs.git.xml
plugins/git4idea/shared/resources/: intellij.vcs.git.shared.xml
plugins/git4idea/tests/git4idea/history/: GitHistoryTraverserImplTest.kt
plugins/git4idea/tests/git4idea/ignore/: ConvertExcludedToGitIgnoredTest.kt  GitIgnoredFileTest.kt
plugins/git4idea/tests/git4idea/rebase/log/changes/: GitDropSelectedChangesOperationTest.kt
plugins/git4idea/tests/git4idea/repo/: GitCloneLongPathsTest.kt  GitRepositoriesFrontendHolderTest.kt
plugins/git4idea/tests/git4idea/workingTrees/: GitWorkingTreeFromRemoteBranchesTest.kt
plugins/stream-debugger-core/intellij.debugger.streams.shared/resources/: intellij.debugger.streams.shared.xml
python/pluginResources/: intellij.python.community.impl.xml
python/src/com/jetbrains/python/sdk/conda/execution/: CondaExecutionParser.kt  CondaExecutor.kt
