load("@rules_java//java:defs.bzl", "java_binary")
load("@rules_jvm//:jvm.bzl", "kt_javac_options")
load("//build:compiler-options.bzl", "create_kotlinc_options")

kt_javac_options(
  name = "default-javac-opts",
  no_proc = True,
)

create_kotlinc_options(name= "k7", jvm_target = "7")
create_kotlinc_options(name= "k8", jvm_target = "8")
create_kotlinc_options(name= "k11", jvm_target = "11")
create_kotlinc_options(name = "k17", jvm_target = "17")
create_kotlinc_options(name = "k21", jvm_target = "21")

java_binary(
  name = "main_run",
  runtime_deps = [":main"],
  main_class = "com.intellij.idea.Main",
  jvm_flags = [
    "-Xmx2g",
    "-XX:ReservedCodeCacheSize=240m",
    "-XX:SoftRefLRUPolicyMSPerMB=50",
    "-XX:MaxJavaStackTraceDepth=10000",
    "-ea",
    "-Dsun.io.useCanonCaches=false",
    "-Dapple.laf.useScreenMenuBar=true",
    "-Dsun.awt.disablegrab=true",
    "-Didea.jre.check=true",
    "-Didea.is.internal=true",
    "-Didea.debug.mode=true",
    "-Djdk.attach.allowAttachSelf",
    "-Dfus.internal.test.mode=true",
    "-Dkotlinx.coroutines.debug=off",
    "-Djdk.module.illegalAccess.silent=true",
    "-Didea.config.path=../config/idea",
    "-Didea.system.path=../system/idea",
    "--add-opens=java.base/java.io=ALL-UNNAMED",
    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
    "--add-opens=java.base/java.lang=ALL-UNNAMED",
    "--add-opens=java.base/java.net=ALL-UNNAMED",
    "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
    "--add-opens=java.base/java.text=ALL-UNNAMED",
    "--add-opens=java.base/java.time=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
    "--add-opens=java.base/java.util=ALL-UNNAMED",
    "--add-opens=java.base/jdk.internal.vm=ALL-UNNAMED",
    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
    "--add-opens=java.base/sun.nio.fs=ALL-UNNAMED",
    "--add-opens=java.desktop/com.apple.eawt.event=ALL-UNNAMED",
    "--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED",
    "--add-opens=java.desktop/com.apple.laf=ALL-UNNAMED",
    "--add-opens=java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
    "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.text=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.text.html=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing.text.html.parser=ALL-UNNAMED",
    "--add-opens=java.desktop/javax.swing=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.datatransfer=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.image=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt.windows=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.java2d=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
    "--add-opens=java.desktop/sun.swing=ALL-UNNAMED",
    "--add-opens=jdk.attach/sun.tools.attach=ALL-UNNAMED",
    "--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED",
    "--add-opens=jdk.jdi/com.sun.tools.jdi=ALL-UNNAMED",
    "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
    "-Didea.platform.prefix=Idea",
    "-Djava.system.class.loader=com.intellij.util.lang.PathClassLoader",
    "-Djavax.xml.parsers.SAXParserFactory=com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl"
  ]
)

## used to determine community root path in the test
## see community/build/tests-options.bzl
exports_files(["intellij.idea.community.main.iml"])

### auto-generated section `build intellij.idea.community.main` start
load("@rules_jvm//:jvm.bzl", "jvm_library")

jvm_library(
  name = "main",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    "//platform/main/intellij.platform.monolith.main:monolith-main",
    "//platform/diff-api:diff",
    "//platform/diff-impl",
    "//platform/extensions",
    "//platform/icons",
    "//platform/lang-api:lang",
    "//platform/lang-impl",
    "//platform/lvcs-api:lvcs",
    "//platform/lvcs-impl",
    "//platform/platform-api:ide",
    "//platform/platform-impl:ide-impl",
    "//platform/starter",
    "//platform/util",
    "//platform/vcs-api:vcs",
    "//platform/vcs-impl",
    "//platform/vcs-impl/exec",
    "//platform/vcs-impl/lang",
    "//platform/vcs-impl/lang/actions",
    "//community-resources:customization",
    "//plugins/git4idea:vcs-git",
    "//plugins/git4idea/shared",
    "//plugins/git4idea/frontend",
    "//plugins/git-features-trainer:vcs-git-featuresTrainer",
    "//images",
    "//plugins/github/github-core:vcs-github",
    "//plugins/terminal",
    "//plugins/terminal/frontend",
    "//plugins/terminal/backend",
    "//plugins/terminal/sh",
    "//plugins/emojipicker",
    "//plugins/laf/macos",
    "//plugins/laf/win10",
    "//plugins/keymaps/eclipse-keymap:keymap-eclipse",
    "//plugins/keymaps/visual-studio-keymap:keymap-visualStudio",
    "//plugins/keymaps/netbeans5.6-keymap:keymap-netbeans",
    "//platform/smart-update",
    "//platform/execution-process-elevation",
    "//plugins/gitlab/gitlab-core:vcs-gitlab",
    "//plugins/github/github-tracker:vcs-github-tracker",
    "//plugins/git-modal-commit:vcs-git-commit-modal",
  ]
)

jvm_library(
  name = "main_test_lib",
  module_name = "intellij.idea.community.main",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    ":main",
    "//platform/build-scripts/icons:images-build",
    "//platform/build-scripts/icons:images-build_test_lib",
    "//plugins/textmate/plugin",
    "//plugins/textmate/backend",
    "//plugins/commander",
    "//plugins/commander:commander_test_lib",
    "//plugins/git4idea/terminal",
    "//plugins/git4idea/terminal:terminal_test_lib",
    "//platform/instanceContainer:instanceContainer-tests_test_lib",
    "//platform/polySymbols:polySymbols-tests_test_lib",
  ]
)
### auto-generated section `build intellij.idea.community.main` end

### auto-generated section `build intellij.idea.community.main.android` start
jvm_library(
  name = "main-android",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [
    "//android/android:core",
    "//:main",
    "//android/android-plugin:plugin",
    "//android/layoutlib",
    "//plugins/kotlin:kotlin-plugin-community-main",
    "//android/compose-designer",
    "//android/compose-ide-plugin",
    "//android/design-plugin",
    "//android/android-navigator:navigator",
  ]
)

jvm_library(
  name = "main-android_test_lib",
  module_name = "intellij.idea.community.main.android",
  visibility = ["//visibility:public"],
  srcs = glob([], allow_empty = True),
  runtime_deps = [":main-android"]
)
### auto-generated section `build intellij.idea.community.main.android` end